#10 Fix dark mode border colour of first todo item in list of todo items

--- a/src/components/todo-item/todo-item.scss
+++ b/src/components/todo-item/todo-item.scss
@@ -14,7 +14,10 @@
   }
 
   @media (prefers-color-scheme: dark) {
-    border-color: $grey-darken-3;
+    &,
+    &:first-of-type {
+      border-color: $grey-darken-3;
+    }
   }
 
   // Todo status
